updates html javascript and css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Word Guess</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/rest.css">
     </head>
     <body>
         <h1>Word Guess Game</h1>
@@ -15,12 +15,17 @@
     </body>
     <div class="container">
         <header>
-            <h1>Hangman Game</h1>
-            <br>
-            <h3>Basketball Word Guess</h3>
+            <h1>National Park Word Guess</h1>
+        
         </header>
-        <div class="underscores">_ _ _ _ _ _ _</div>
-        <div class="rightGuess">right guess</div>
-        <div class="wrongGuess">wrong guess</div>
+        <br>
+        <div class="underscores">_ _ _ _ _</div>
+        <br>
+        <div class="rightLetters">Right Letters</div>
+        <br>
+        <div class="wrongLetters">Wrong Letters</div>
     </div>
+
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+
 </html>
