--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         </header>
         <br>
-        <div class="underscores">_ _ _ _ _</div>
+        <div class="underscores"></div>
         <br>
         <div class="rightLetters">Right Letters</div>
         <br>
